--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,9 @@ main:
   - title: "Home"
     url: https://eunnyoung.github.io
   # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  #   url: /about/
+  # - title: "나의 첫 파이썬"
+  #   url: /MakingBlog/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
