--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,8 @@ main:
      url: /about/
   - title: "나의 첫 파이썬"
      url: /MyFirstPython/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Categories"
+     url: /categories/
+  - title: "Tags"
+    url: /tags/
+
