--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -20,7 +20,7 @@ foo:
 
 # main links
 main:
-  - title: "Home"
+  - title: ""
     url: https://eunnyoung.github.io
   - title: "About"
     url: /about/
