--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   name             : "eunnyoung"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  location         : "South Korea"
   email            :
   links:
     - label: "Email"
