--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: "My First Python"
     url: /MyFirstPython/
   - title: "Categories"
-    url: /categories/
+    url: /Categories/
   - title: "Tags"
-    url: /tags/
+    url: /Tags/
 
